# TCC

./: .gitignore  CMakeLists.txt  best_individual.csv  best_individual7.csv  config.h.in
data/: DadosTCCv2.xlsx
data/processed/: AERONAVE.csv  CASK.csv  PASSAGEM.csv  ROTAS.csv  ROTAS2.csv  ROTAS3.csv
include/: config.h  enumTypedef.h  gp.h  gpu.cuh  util.h
result/: best_individual.csv  best_individual.txt  best_individualCPU1.csv  best_individualCPU1_flights_per_destination.txt  best_individualCPU1aircraft_amount.txt  best_individualCPU7.csv  best_individualCPU7aircraft_amount.txt  best_individualGPU1.csv  best_individualGPU1aircraft_amount.txt  best_individualGPU2.csv  best_individualGPU2aircraft_amount.txt  best_individualGPU3aircraft_amount.txt  best_individualGPU4aircraft_amount.txt  times_solution1.txt  times_solution2.txt  times_solution3.txt  times_solution4.txt  times_solution5.txt  times_solution6.txt  times_solution7.txt
result/result2_7000/: best_individualGPU1.csv  best_individualGPU2.csv  best_individualGPU2aircraft_amount.txt  best_individualGPU3.csv  best_individualGPU4.csv  best_individualGPU5.csv  best_individualGPU5aircraft_amount.txt  best_individualGPU6.csv  best_individualGPU6aircraft_amount.txt  best_individualGPU7.csv  best_individualGPU7aircraft_amount.txt
result/result5_2000/: best_individualCPU1.csv  best_individualCPU3.csv  best_individualCPU3aircraft_amount.txt  best_individualCPU5.csv  best_individualCPU7.csv  best_individualCPU7aircraft_amount.txt  best_individualGPU1aircraft_amount.txt  best_individualGPU2.csv  best_individualGPU2aircraft_amount.txt  best_individualGPU4.csv  best_individualGPU4aircraft_amount.txt  best_individualGPU5aircraft_amount.txt  best_individualGPU6.csv  best_individualGPU6aircraft_amount.txt
result/results10_2000/: best_individualCPU2aircraft_amount.txt  best_individualCPU7_flights_per_destination.txt  best_individualGPU1.csv  best_individualGPU6aircraft_amount.txt  times_solution1.txt  times_solution2.txt  times_solution3.txt  times_solution4.txt  (+3 more)
src/: gp.cpp  gpu.cu  main.cu  util.h
util/: util.cpp
(+12 files in other folders)
